--- a/html/index.html
+++ b/html/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main-character.tsx"></script>
+    <script type="module" src="../src/main-character.tsx"></script>
   </body>
 </html>
